Add static url.

--- a/summit/static/scss/_theme.scss
+++ b/summit/static/scss/_theme.scss
@@ -88,7 +88,7 @@ a {
 }
 
 .navigation-button {
-  background: url(/static/img/icons/menu.svg) no-repeat center;
+  background: url(#{$static-url}img/icons/menu.svg) no-repeat center;
   background-size: 50px 50px;
   display: block;
   width: 60px;
@@ -135,15 +135,15 @@ a {
 }
 
 .header-media--twitter {
-  background: url(/static/img/icons/twitter.svg) no-repeat center;
+  background: url(#{$static-url}img/icons/twitter.svg) no-repeat center;
 }
 
 .header-media--facebook {
-  background: url(/static/img/icons/facebook.svg) no-repeat center;
+  background: url(#{$static-url}img/icons/facebook.svg) no-repeat center;
 }
 
 .header-media--mail {
-  background: url(/static/img/icons/email.svg) no-repeat center;
+  background: url(#{$static-url}img/icons/email.svg) no-repeat center;
 }
 
 .navigation-button2{
@@ -338,11 +338,11 @@ a {
 }
 
 .about-container {
-  background: url('/static/img/backgrounds/about.png') no-repeat;
+  background: url('#{$static-url}img/backgrounds/about.png') no-repeat;
   background-size: cover;
 
   @media #{$small-only} {
-    background-image: url('/static/img/backgrounds/about-mobile.jpg');
+    background-image: url('#{$static-url}img/backgrounds/about-mobile.jpg');
   }
 }
 
@@ -426,7 +426,7 @@ a {
 }
 
 .organisers-container {
-  background-image: url('/static/img/backgrounds/organisers.jpg');
+  background-image: url('#{$static-url}img/backgrounds/organisers.jpg');
   color: white;
 
   @media #{$small-only} {
@@ -520,12 +520,12 @@ a {
 
 
 .speakers-container {
-  background: url('/static/img/backgrounds/speakers.jpg') no-repeat;
+  background: url('#{$static-url}img/backgrounds/speakers.jpg') no-repeat;
   background-size: cover;
   color: white;
 
   @media #{$small-only} {
-    background-image: url('/static/img/backgrounds/speakers-mobile.jpg');
+    background-image: url('#{$static-url}img/backgrounds/speakers-mobile.jpg');
   }
 }
 
@@ -838,7 +838,7 @@ a {
   width: 100%;
   
   @media #{$small-only} {
-    background-image: url('/static/img/backgrounds/map-mobile.png');
+    background-image: url('#{$static-url}img/backgrounds/map-mobile.png');
   }
 }
 
@@ -886,7 +886,7 @@ a {
 }
 
 .media-container {
-  background-image: url('/static/img/backgrounds/media.png');
+  background-image: url('#{$static-url}img/backgrounds/media.png');
   color: white;
 }
 
@@ -1149,7 +1149,7 @@ a {
 .footer {
   width: 100%;
   height: 125px;
-  background: url('/static/img/backgrounds/media.png');
+  background: url('#{$static-url}img/backgrounds/media.png');
   background-position: center;
   position: fixed;
   bottom: 0;
@@ -1416,7 +1416,7 @@ Attendees list
   display: inline-block;
   width: 27px;
   height: 27px;
-  background: url('/static/img/icons/slides.png') no-repeat center;
+  background: url('#{$static-url}img/icons/slides.png') no-repeat center;
   position: absolute;
   margin-left: 7px;
   background-size: cover;
