--- a/summit/templates/home.html
+++ b/summit/templates/home.html
@@ -6,7 +6,7 @@
   <div class="intro">
     <img src="{% static 'img/logo.svg' %}">
     <h1 class="event-name"><span>.pywaw</span><span class="event-name__summit">summit</span></h1>
-    <h2 class="intro__subtitle">Join us at second edition of our conference!</h2><h2 class="intro__date">May 2016 Warsaw</h2>
+    <h2 class="intro__subtitle">Join us at the second edition of our conference!</h2><h2 class="intro__date">May 2016 Warsaw</h2>
 
     <div class="intro-buttons">
       <div class="registration-button">
