--- a/summit/templates/base.html
+++ b/summit/templates/base.html
@@ -24,6 +24,7 @@
   <ul class="sidebar__menu">
     <li class="sidebar__menu__item"><a class="sidebar__menu__link" href="{% url 'home' %}" data-target="intro">Home</a></li>
     <li class="sidebar__menu__item"><a class="sidebar__menu__link" href="http://blog.summit.pywaw.org">Blog</a></li>
+    <li class="sidebar__menu__item"><a class="sidebar__menu__link" href="http://summit.pywaw.org/2015/">2015</a></li>
   </ul>
 </div>
 
@@ -38,6 +39,7 @@
   <ul class="navigation">
     <li class="navigation__item"><a href="{% url 'home' %}" class="navigation__link" data-target="intro">Home</a></li>
     <li class="navigation__item"><a href="http://blog.summit.pywaw.org" class="navigation__link">Blog</a></li>
+    <li class="navigation__item"><a href="http://summit.pywaw.org/2015/" class="navigation__link">2015</a></li>
   </ul>
 </div>
 
