--- a/summit/templates/base.html
+++ b/summit/templates/base.html
@@ -23,6 +23,7 @@
 <div class="sidebar-nav">
   <ul class="sidebar__menu">
     <li class="sidebar__menu__item"><a class="sidebar__menu__link" href="{% url 'home' %}" data-target="intro">Home</a></li>
+    <li class="sidebar__menu__item"><a class="sidebar__menu__link" href="{% url 'home' %}#about" data-target="about">About</a></li>
     <li class="sidebar__menu__item"><a class="sidebar__menu__link" href="http://blog.summit.pywaw.org">Blog</a></li>
     <li class="sidebar__menu__item"><a class="sidebar__menu__link" href="http://summit.pywaw.org/2015/">2015</a></li>
   </ul>
@@ -38,6 +39,7 @@
   </ul>
   <ul class="navigation">
     <li class="navigation__item"><a href="{% url 'home' %}" class="navigation__link" data-target="intro">Home</a></li>
+    <li class="navigation__item"><a href="{% url 'home' %}#about" class="navigation__link" data-target="about">About</a></li>
     <li class="navigation__item"><a href="http://blog.summit.pywaw.org" class="navigation__link">Blog</a></li>
     <li class="navigation__item"><a href="http://summit.pywaw.org/2015/" class="navigation__link">2015</a></li>
   </ul>
@@ -62,6 +64,10 @@
 
 <script type="text/javascript" src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'bower_components/foundation/js/foundation.js' %}"></script>
+<script type="text/javascript" src="{% static 'bower_components/jquery.scrollTo/jquery.scrollTo.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/misc.js' %}"></script>
+
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -71,6 +77,7 @@
   ga('send', 'pageview');
   $(document).foundation();
 </script>
+
 {% block js %}{% endblock %}
 
 </body>
